# CHIP8_Emulator

./: CMakeLists.txt  README.md  chip8.c  chip8keyboard.c  chip8memory.c  chip8screen.c  chip8stack.c  main.c
include/: chip8.h  chip8keyboard.h  chip8memory.h  chip8registers.h  chip8screen.h  chip8stack.h  config.h
